gccida/c0/split_insns
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_insns/src/insn-recog.c:56085:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.insn = 0LL; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_insns/src/insn-recog.c:56091:50: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( *( _DWORD *)x0->fld[0].rtwint == 1 && x0[1] == 13 ) 
                                           ~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_insns/src/insn-recog.c:56098:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_insns/src/insn-recog.c:56100:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_1178( recog_data_0.operand); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_insns/src/insn-recog.c:56107:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_insns/src/insn-recog.c:56109:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_1179( recog_data_0.operand); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_insns/src/obj/insn-recog.o] Error 1
